--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "vite-project",
+  "name": "web_project_around_react",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-"scripts": {
-    "dev": "vite --open",
+  "scripts": {
+    "dev": "vite",
     "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
